# musiclib

./: .env.example  .gitignore  README.md  config.yaml  docker-compose.yml  playlists.txt.example
docs/: GO-LIVE.md  USAGE.md
orchestrator/: Dockerfile  crontab  pyproject.toml
orchestrator/src/musiclib/: cli.py  config.py  downloader.py  matcher.py  models.py  navidrome_client.py  playlists.py  savefile.py  state.py  sync.py
orchestrator/tests/: test_config.py  test_downloader.py  test_matcher.py  test_navidrome_client.py  test_playlists.py  test_savefile.py  test_state.py  test_sync.py
scripts/: add-playlist.sh  sync-bg.sh  sync.sh
