[project]
name = "musiclib"
version = "0.1.0"
description = "Spotify -> Navidrome offline playlist sync orchestrator"
requires-python = ">=3.12"
dependencies = [
    "spotdl>=4.2",
    "requests>=2.31",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
musiclib = "musiclib.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
